--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "nodemailer": "^7.0.11"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
